@@ -14,6 +14,8 @@ OPTIONS
 -h, --help
                     Show this help message and exit
 
+--config=FILE       Config file to use. Default=~/.rst2pdf/config
+
 -o FILE, --output=FILE
                     Write the PDF to FILE
 
